feat:modify domain objects